# kubernetes-ai-ops-tools

./: .gitignore  README.md
inboxr/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
inboxr/.github/workflows/: ci.yml
inboxr/examples/: double-booking.json  expense-fraud-detection.json  monday-morning.json  new-hire.json  security-breach-triage.json  slack-to-meeting.json  triage-and-redirect.json  vacation-return.json
inboxr/inboxr/: __init__.py  calendar.py  cli.py  consistency.py  drive.py  eval.py  gmail.py  personas.py  scenarios.py  slack.py  ui.py  whatsapp.py  workspace.py
inboxr/schemas/: persona.schema.json  scenario.schema.json
inboxr/tests/: test_consistency.py  test_enhancements.py  test_eval.py  test_generation.py
k8s-runtime-replay/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
k8s-runtime-replay/.github/: pull_request_template.md
k8s-runtime-replay/docs/: advanced-usage.md  demo.md  falco-setup.md  local-cluster.md  scenario-authoring.md  workshop-mode.md
k8s-runtime-replay/lib/: behavior.sh  checks.sh  common.sh  falco.sh  output.sh  result.sh
kubectl-triage/: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  kubectl-triage.yaml  main.go
kubectl-triage/.github/: FUNDING.yml  pull_request_template.md
kubectl-triage/cmd/: deployment.go  job.go  pod.go  root.go
kubectl-triage/docs/: advanced-usage.md  output-format.md  when-not-to-use.md
secclear-cli/: .gitignore  LICENSE  Makefile  README.md  go.mod  install.sh
(+67 files in other folders)
